# artifacts/api-server/src/app.ts
@@ -26,6 +26,9 @@ app.use(
   }),
 );
 app.use(cors());
+
+app.use("/api/subscription/webhook", express.raw({ type: "application/json" }));
+
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
